--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py36
 [testenv]
 commands =
     # python setup.py check -m -r -s
-    flake8 .
+    make lint
     make test
 deps =
     flake8
@@ -15,7 +15,7 @@ whitelist_externals =
     make
 
 [flake8]
-exclude = env,.tox,*.egg,build,data
+exclude = .env,.tox,*.egg,build,data
 max-line-length = 100
 max-complexity = 5
 select = E,W,F,C901
@@ -31,7 +31,7 @@ testpaths =
     tests
 
 [coverage:report]
-fail_under = 100
+# fail_under = 100
 show_missing = True
 exclude_lines =
     pragma: no cover
