[refac] rename package to `snapshotbackup`

--- a/tox.ini
+++ b/tox.ini
@@ -21,13 +21,13 @@ max-complexity = 5
 select = E,W,F,C901
 
 [pytest]
-addopts = --doctest-modules --cov=btrfsbackup --mccabe
+addopts = --doctest-modules --cov=snapshotbackup --mccabe
 filterwarnings =
     error
     ignore::DeprecationWarning
 mccabe-complexity = 5
 testpaths =
-    btrfsbackup
+    snapshotbackup
     tests
 
 [coverage:report]
