[tools] disable mccabe in `pytest`, we do it w/ `flake8`

--- a/tox.ini
+++ b/tox.ini
@@ -21,11 +21,10 @@ max-complexity = 5
 select = E,W,F,C901
 
 [pytest]
-addopts = --doctest-modules --cov=snapshotbackup --mccabe
+addopts = --doctest-modules --cov=snapshotbackup
 filterwarnings =
     error
     ignore::DeprecationWarning
-mccabe-complexity = 5
 testpaths =
     snapshotbackup
     tests
