--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ python-dateutil==2.7.2
 pytz==2018.4
 regex==2018.2.21
 requests==2.18.4
+setuptools-scm==2.0.0
 six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.7.3
