[fix, demo] use proper cwd in demo
`setuptools-scm` was unable to detect version.

--- a/demo/config.ini
+++ b/demo/config.ini
@@ -1,5 +1,5 @@
 [demo]
-source = ../snapshotbackup
-backups = backups
+source = snapshotbackup
+backups = demo/backups
 retain_all = '1 minute'
 retain_daily = '1 week'
