--- a/Makefile.demo
+++ b/Makefile.demo
@@ -1,7 +1,8 @@
-isofile := btrfs.img
+isofile := demo/btrfs.img
 isosize := 500M
-mnt_dir := backups
-script  := ../dev.py
+mnt_dir := demo/backups
+script  := ./dev.py
+config  := demo/config.ini
 opts    :=
 
 .NOTPARALLEL:
@@ -15,16 +16,16 @@ setup:
 	mkfs.btrfs $(isofile)
 	sudo mount -o loop $(isofile) $(mnt_dir)
 	sudo chmod a+w $(mnt_dir)
-	$(script) $(opts) -c config.ini setup demo
+	$(script) $(opts) -c $(config) setup demo
 
 backup:
-	$(script) $(opts) -c config.ini backup demo
+	$(script) $(opts) -c $(config) backup demo
 
 list:
-	$(script) $(opts) -c config.ini list demo
+	$(script) $(opts) -c $(config) list demo
 
 purge:
-	$(script) $(opts) -c config.ini purge demo
+	$(script) $(opts) -c $(config) purge demo
 
 .IGNORE: clean
 clean:
