--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ jobs:
   include:
   - stage: Run unit tests
     script: make check
+  - stage: Build docs
+    script: make doc
   - stage: Run demo
     script: make -f Makefile.demo test
   - stage: Run tox
