[travis] remove `stages`
`stages` is still alpha. on last release travis deployed after first
stage completed, regardless of second stage failing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,11 @@ language: python
 python: '3.6'
 sudo: required
 install: pip install -r requirements.txt
-jobs:
-  include:
-  - stage: Run unit tests
-    script: make check
-  - stage: Build docs
-    script: make doc
-  - stage: Run demo
-    script: make -f Makefile.demo test
-  - stage: Run tox
-    script: tox
+script:
+  - make check
+  - make doc
+  - make -f Makefile.demo test
+  - tox
 deploy:
   provider: pypi
   user: hbschr
