[package] add `author_email`
includes: check package metadata on tox run.

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py36
 
 [testenv]
 commands =
-    # python setup.py check -m -r -s
+    ./setup.py check -m -s
     make lint
     make test
 deps =
