[tools] lint all python, not just one package
add `.git` to flake8 config exclude,
ref fbaa2c592cb91564ffd425b719091bf0303956f8

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ whitelist_externals =
     make
 
 [flake8]
-exclude = .env,.tox,*.egg,build,data
+exclude = .env,.git,.tox,*.egg,build
 max-line-length = 120
 max-complexity = 10
 select = E,W,F,C901
