--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ attrs==17.4.0
 Babel==2.5.3
 certifi==2018.4.16
 chardet==3.0.4
-coverage==4.5.1
+coverage==4.0.3
 dateparser==0.7.0
 docutils==0.14
 execnet==1.5.0
@@ -26,8 +26,10 @@ pytest==3.5.0
 pytest-cache==1.0
 pytest-cov==2.5.1
 pytest-mccabe==0.1
+python-coveralls==2.9.1
 python-dateutil==2.7.2
 pytz==2018.4
+PyYAML==3.12
 regex==2018.2.21
 requests==2.18.4
 setuptools-scm==2.0.0
