--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.7.3
 sphinxcontrib-websupport==1.0.1
+systemd-python==234
 tox==3.0.0
 tzlocal==1.5.1
 urllib3==1.22
