--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Babel==2.5.3
 certifi==2018.4.16
 chardet==3.0.4
 coverage==4.0.3
+csboilerplate==0.0.3
 dateparser==0.7.0
 docutils==0.14
 execnet==1.5.0
