--- a/Makefile.demo
+++ b/Makefile.demo
@@ -29,8 +29,8 @@ backup-checksum:
 list:
 	$(script) $(opts) -c $(config) list demo
 
-purge:
-	$(script) $(opts) -c $(config) purge demo
+prune:
+	$(script) $(opts) -c $(config) prune demo
 
 .IGNORE: clean
 clean:
@@ -41,4 +41,4 @@ clean:
 version:
 	snapshotbackup -v
 
-test: version setup backup sleep backup-checksum list purge clean
+test: version setup backup sleep backup-checksum list prune clean
