[tools] add branch coverage and set maxfail to 1

--- a/tox.ini
+++ b/tox.ini
@@ -21,13 +21,16 @@ max-complexity = 10
 select = E,W,F,C901
 
 [pytest]
-addopts = --doctest-modules --cov=snapshotbackup
+addopts = --doctest-modules --cov=snapshotbackup --maxfail=1
 filterwarnings =
     error
     ignore::DeprecationWarning
 testpaths =
     snapshotbackup
     tests
+
+[coverage:run]
+branch = True
 
 [coverage:report]
 # fail_under = 100
