[tools, make] refac makefile
includes:
- rename files to start w/ lowercase
- amend `clean` and `distclean`
- order

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 script:
   - make check
   - make doc
-  - make -f Makefile.demo test
+  - make -f makefile.demo test
   - tox
 after_success:
   - coveralls
