--- a/makefile.demo
+++ b/makefile.demo
@@ -8,7 +8,7 @@ opts    :=
 .NOTPARALLEL:
 
 help:
-	@echo 'no user-friendly help here, please consult `demo/Makefile` and `demo/config.ini` and have fun!'
+	@echo 'no user-friendly help here, please consult `makefile.demo` and `demo/config.ini` and have fun!'
 
 sleep:
 	sleep 1s
@@ -32,6 +32,9 @@ list:
 prune:
 	$(script) $(opts) -c $(config) prune demo
 
+decay:
+	$(script) $(opts) -c $(config) decay demo
+
 .IGNORE: clean
 clean:
 	sudo umount $(mnt_dir)
@@ -41,4 +44,4 @@ clean:
 version:
 	snapshotbackup -v
 
-test: version setup backup sleep backup-checksum list prune clean
+test: version setup backup sleep backup-checksum list prune decay clean
