--- a/demo/config.ini
+++ b/demo/config.ini
@@ -1,5 +1,5 @@
 [demo]
 source = snapshotbackup
-backups = demo/backups
+backups = demo/backups/vol
 retain_all = '1 minute'
 retain_daily = '1 week'
