[cli] ask before delete backups
includes:
- intro `yes_no_prompt`
- intro argument `--yes`, replaces `--delete`
- rename `delete` to `destroy`

--- a/makefile.demo
+++ b/makefile.demo
@@ -36,13 +36,13 @@ list:
 	$(script) $(opts) -c $(config) list demo
 
 prune:
-	$(script) $(opts) -c $(config) prune demo
+	$(script) $(opts) -c $(config) prune demo --yes
 
 decay:
-	$(script) $(opts) -c $(config) decay demo
+	$(script) $(opts) -c $(config) decay demo --yes
 
 delete:
-	$(script) $(opts) -c $(config) delete demo --delete
+	$(script) $(opts) -c $(config) destroy demo --yes
 
 test: mount-fs version setup backup sleep backup-checksum list prune decay delete clean
 
