--- a/requirements.txt
+++ b/requirements.txt
@@ -7,40 +7,40 @@ certifi==2018.11.29
 chardet==3.0.4
 coverage==4.5.2
 coveralls==1.5.1
-csboilerplate==0.1.0
 dateparser==0.7.0
 docopt==0.6.2
 docutils==0.14
 execnet==1.5.0
 filelock==3.0.10
 flake8==3.6.0
-idna==2.7
+humanfriendly==4.17
+idna==2.8
 imagesize==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
 mccabe==0.6.1
-more-itertools==4.3.0
+more-itertools==5.0.0
 packaging==18.0
 pluggy==0.8.0
 py==1.7.0
 pycodestyle==2.4.0
 pyflakes==2.0.0
-Pygments==2.3.0
+Pygments==2.3.1
 pyparsing==2.3.0
-pytest==4.0.1
+pytest==4.0.2
 pytest-cache==1.0
 pytest-cov==2.6.0
 pytest-mccabe==0.1
 python-dateutil==2.7.5
 pytz==2018.7
 regex==2018.11.22
-requests==2.20.1
-six==1.11.0
+requests==2.21.0
+six==1.12.0
 snowballstemmer==1.2.1
-Sphinx==1.8.2
+Sphinx==1.8.3
 sphinxcontrib-websupport==1.1.0
 toml==0.10.0
-tox==3.5.3
+tox==3.6.1
 tzlocal==1.5.1
 urllib3==1.24.1
-virtualenv==16.1.0
+virtualenv==16.2.0
