--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,7 @@ commands =
     make lint
     make test
 deps =
-    flake8
-    pytest
-    pytest-cov
-    pytest-mccabe
+    .[dev]
 whitelist_externals =
     make
 
