--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ mccabe==0.6.1
 more-itertools==5.0.0
 packaging==18.0
 pluggy==0.8.0
+psutil==5.4.8
 py==1.7.0
 pycodestyle==2.4.0
 pyflakes==2.0.0
