--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,52 @@
 alabaster==0.7.12
 apipkg==1.5
-atomicwrites==1.2.1
-attrs==18.2.0
+atomicwrites==1.3.0
+attrs==19.1.0
 Babel==2.6.0
-certifi==2018.11.29
+certifi==2019.3.9
 chardet==3.0.4
-coverage==4.5.2
-coveralls==1.5.1
-dateparser==0.7.0
-docopt==0.6.2
+coverage==4.5.3
+dateparser==0.7.1
 docutils==0.14
-execnet==1.5.0
+entrypoints==0.3
+execnet==1.6.0
 filelock==3.0.10
-flake8==3.6.0
-humanfriendly==4.17
+flake8==3.7.7
+humanfriendly==4.18
 idna==2.8
 imagesize==1.1.0
 Jinja2==2.10.1
-MarkupSafe==1.1.0
+MarkupSafe==1.1.1
 mccabe==0.6.1
-more-itertools==5.0.0
-packaging==18.0
-pluggy==0.8.0
-psutil==5.4.8
-py==1.7.0
-pycodestyle==2.4.0
-pyflakes==2.0.0
+more-itertools==7.0.0
+packaging==19.0
+pluggy==0.9.0
+psutil==5.6.2
+py==1.8.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
 Pygments==2.3.1
-pyparsing==2.3.0
-pytest==4.0.2
+pyparsing==2.4.0
+pytest==4.4.1
 pytest-cache==1.0
 pytest-cov==2.6.1
 pytest-mccabe==0.1
-python-dateutil==2.7.5
-pytz==2018.7
-regex==2018.11.22
+python-dateutil==2.8.0
+pytz==2019.1
+regex==2019.4.14
 requests==2.21.0
 six==1.12.0
 snowballstemmer==1.2.1
-Sphinx==1.8.3
-sphinxcontrib-websupport==1.1.0
+Sphinx==2.0.1
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
 toml==0.10.0
-tox==3.6.1
+tox==3.9.0
 tzlocal==1.5.1
-urllib3==1.24.1
-virtualenv==16.2.0
+urllib3==1.24.2
+virtualenv==16.5.0
 xdg==4.0.0
