[travis] update to python 3.7 on xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
+dist: xenial   # required for Python >= 3.7
 language: python
-python: '3.7-dev'
+python: '3.7'
 sudo: required
 install:
   - pip install tox
