[tools] tox tests both `.[dev]` and `requirements.txt`
includes:
- tox doesn't enforce python version
- add `make doc` to test commands
- add env w/o dev deps for `make demo`

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,23 @@
 [tox]
-envlist = py37
+envlist =
+    dev
+    requirements
 
 [testenv]
 commands =
     ./setup.py check -m -s
     make lint
     make test
+    make doc
 deps =
-    .[dev]
+    dev: .[dev]
+    requirements: -rrequirements.txt
 whitelist_externals =
     make
+
+[testenv:demo]
+commands =
+    make demo
 
 [flake8]
 exclude = .env,.git,.tox,*.egg,build
