[demo] prevent test from writing to cache dir in `$HOME`
use xdg environment, ref 230a7e306e5c74c9291bce497f1a16b410f2736e

--- a/makefile.demo
+++ b/makefile.demo
@@ -5,6 +5,8 @@ script  := snapshotbackup
 config  := demo/config.ini
 opts    :=
 
+export XDG_CACHE_HOME = $(mnt_dir)/cache
+
 .NOTPARALLEL:
 
 help:
@@ -46,9 +48,8 @@ delete:
 
 test: mount-fs version setup backup sleep backup-checksum list prune decay delete clean
 
-.IGNORE: clean
 .PHONY: clean
 clean:
-	sudo umount $(mnt_dir)
-	rmdir $(mnt_dir)
-	rm $(isofile)
+	-sudo umount $(mnt_dir)
+	-rmdir $(mnt_dir)
+	-rm $(isofile)
