[travis] make use of tox environments
ref 5a3eb9a2595d239ebf3a67aade2c2fb26ea48fd4

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,10 @@ language: python
 python: '3.7-dev'
 sudo: required
 install:
-  - pip install -r requirements.txt
-  - pip install .
+  - pip install tox
 script:
-  - make check
-  - make doc
-  - make -f makefile.demo test
   - tox
+  - tox -e demo
 after_success:
   - coveralls
 deploy:
