[tools, ci] repair coveralls.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ python:
   - '3.9'
 sudo: required
 install:
-  - pip install tox
+  - pip install .[dev,ci]
 script:
   - tox
   - tox -e demo
 after_success:
+  - make test
   - coveralls
 deploy:
   provider: pypi
