[tools] update tox.ini to current versions

--- a/tox.ini
+++ b/tox.ini
@@ -3,15 +3,15 @@ envlist =
     dev
 
 [testenv]
+allowlist_externals =
+    make
 commands =
-    ./setup.py check -m -s
+    ; ./setup.py check -m -s
     make lint
     make test
     make doc
 deps =
     dev: .[dev]
-whitelist_externals =
-    make
 
 [testenv:demo]
 commands =
