--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,29 +1,26 @@
 name: Release
 
 on:
-  workflow_run:
-    workflows: [Test]
-    types: [completed]
-    branches:
-      - main
+  push:
+    tags: "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
+  test:
+    uses: ./.github/workflows/test.yaml
   build-and-publish:
+    needs: test
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
     - name: Checkout
       uses: actions/checkout@v6
-    - name: Fetch tags
-      run: git fetch --prune --unshallow --tags
     - name: Set up Python
       uses: actions/setup-python@v6
       with:
         python-version: '3.x'
     - name: Install build dependencies
-      run: python -m pip install -U setuptools wheel build
+      run: python -m pip install -U build
     - name: Build
       run: python -m build .
     - name: Publish
