--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,8 +21,8 @@ jobs:
       with:
         python-version: ${{ matrix.python }}
     - name: Install test dependencies
-      run: python -m pip install -U tox
-    - name: Test
-      run: |
-        python -m tox
-        python -m tox -e demo
+      run: python -m pip install .[dev]
+    - run: make lint
+    - run: make test
+    - run: make doc
+    - run: make demo
